legacy/v1.2.0/README.en.md
# BiliTitleFilter

An extension I wrote for myself to filter Bilibili. Add a few keywords and the videos whose titles contain them disappear from the page. It can also block whole categories of promoted content, like live streams and anime.

Manifest V3, works in Edge and Chrome, plain JavaScript with no runtime dependencies.

![version](https://img.shields.io/badge/version-1.2.0-orange)
![browser](https://img.shields.io/badge/Edge%20%7C%20Chrome-Chromium-00aeec)
![tests](https://img.shields.io/badge/tests-192%20passed-brightgreen)

---

## Install

1. Grab the latest zip from [Releases](https://github.com/ke25019/bili-title-filter/releases) and extract it somewhere permanent (not the Downloads folder, those get cleaned up)
2. Open `edge://extensions/` in Edge and turn on **Developer mode** in the bottom-left corner
3. Click **Load unpacked** and pick the extracted folder that contains `manifest.json`

On Chrome it's the same thing at `chrome://extensions/`.

Once it's installed, a "屏蔽助手" button shows up near Bilibili's top bar. You can drag it anywhere and it remembers where you put it.

---

## Using it

Click the extension icon in the toolbar, or the button on the Bilibili page — both open the settings. Most of the time you only need one field: type the words you don't want to see and hit Enter. You can paste several at once, separated by commas or spaces.

There are a few matching options: case sensitivity, regular expressions, and whether the uploader's name should be matched too. Changes apply immediately — any open Bilibili tab is rescanned.

---

## Two ways to block

**Mask** — the cover and the title are merged into one block that says 根据您的屏蔽词已将此视频屏蔽. Hover it and the video shows up, move the pointer away and it's masked again. The text is editable.

**Hide** — the video simply isn't shown. By default I do it the way the very first version (v1.0.0) did: only the content is hidden and **the slot is kept**. That way the page doesn't reflow, and Bilibili's empty skeleton placeholders at the end of the grid don't get pulled into the middle of the feed.

If you'd rather have things compact, turn off "keep the original slot" in the panel and the card is removed from the layout entirely, with the following content moving up. Either one is fine, pick whichever you prefer.

---

## Blocking promoted content

Besides title keywords, you can block whole categories: live streams, anime, movies, courses, articles, dynamics, manga, games, music, esports, merch store, events, ads.

There's also an "other promos" catch-all for promo cards that don't fall into any of those (app download prompts, other channel promos, and so on). It only applies when a card matches none of the specific categories — so turning "Live" off doesn't get silently re-blocked by the catch-all.

The big carousel at the top of the home page has its own switch. It only affects that one block on the home page.

I didn't hard-code a single class for detecting promo cards. The order is:

1. Where the links inside the card point (`live.bilibili.com`, `/bangumi/play/`, `/cheese/play/`, …)
2. Known card class names (`.feed-card`, `.bili-video-card`, …)
3. Some areas use BEM naming, so elements like `bili-live-card__image--link` are resolved back to the card root
4. Otherwise it walks up to the first element that contains both a title and a cover
5. The top navigation and a few areas that hide promo links are explicitly excluded

When it can't tell, I'd rather skip than mess up the page, so there are safety valves: the container holds other cards, the size is over 1200×800 or 35% of the viewport, or the element has zero size — any of those and the block is skipped.

---

## The panel on the page

I didn't want to open the extension settings every time, so there's a panel inside the page. When you switch to Hide, a "keep the original slot" switch appears in it.

The panel can be dragged around; the position is stored locally and there's a "reset position" link at the bottom.

---

## Dark mode

The mask and the panel follow Bilibili's dark mode. Detection uses the `dark` attribute / `data-theme` / class names on `<html>`, with the page background brightness as a fallback. You can also force light or dark.

---

## Layout

```
bili-title-filter/
├── manifest.json          extension manifest
├── background.js          service worker: stats, badge, defaults
├── shared/defaults.js     default settings + category definitions and detection rules
├── content/
│   ├── content.js         scanning, matching, blocking, and the in-page panel
│   └── content.css        mask, hiding, dark mode
├── popup/                 toolbar popup
├── options/               full options page
├── tests/                 jsdom tests (not part of the shipped extension)
├── legacy/                archived older versions, each loadable on its own
└── icons/
```

---

## Running the tests

```bash
cd tests
npm install
npm test
```

192 checks covering the blocking logic, category detection, both hiding behaviours, the settings pages and the background stats.

The mock DOM and its sizes were measured on the real site (utility-class structures like `.floor-card-inner > .cover-container + .pb-16.px-12 > p.title`, the `.vui_carousel` banner, the 0×0 hidden links inside `.palette-button-inner`, and so on).

For issues that only show up in a real browser I use the scripts in `tests/browser-harness/`, which launch a separate headless Edge — it only ever kills processes belonging to its own profile.

---

## FAQ

**I blocked a category but content from it is still visible.**
Category blocking is card-level only. When I can't tell which card holds the cover and title, I skip it, so a few unusual promo slots may be left alone. If it's the big banner at the top of the home page, use the separate switch.

**Some promo cards don't belong to any category.**
Turn on the "other promos" catch-all. It only applies when a card matches no specific category.

**Why wasn't a video blocked?**
First check that the keyword really is in the title. With case sensitivity or regex enabled, matching is stricter. You can also enable debug logging in the options and watch the console on the Bilibili tab.

**Does it slow the page down?**
Scanning uses `MutationObserver` with a 180 ms debounce and only touches cards that were added or changed. Category detection only runs while the matching switches are on, and it's rate- and count-limited.

**The counter is higher than the number of videos I saw disappear.**
Bilibili is a single-page app, so scrolling and navigating re-render cards. The counter is an approximation of blocking actions.

---

## Changelog

Newest first. This is what changed and why — including the parts I got wrong.

### 1.2.0

The 1.1.x series is a stable release now. The content matches 1.1.12-beta; only the version number is 1.2.0.

**The outer container's hiding rules never applied.** The CSS said `.bf-blocked.bf-hide` and `.bf-blocked.bf-hide-slot`, while the outer container (the `.floor-card` box with its border, background and 40px shadow) only ever receives `bf-hide` / `bf-hide-slot` and never `bf-blocked` - the class names were applied and not a single rule matched. The card's content disappeared while the white shell stayed on the page, which is the "leftover placeholder" from the reports. Both rules are plain class selectors now: `visibility:hidden` on the element itself when the slot is kept, `display:none` when the card is removed, so the border, background, shadow and the grey layers behind it all go away.

**The category badge was treated as the video title.** The badge in the cover's top-left corner is `.badge > .floor-title`, which shares a class name with the title selectors and sits inside the cover link. Two consequences: card detection stopped right at the cover link and treated one link as a whole card, and the keyword matcher compared against the category name ("番剧") while the real title was ignored entirely. Badge text no longer counts as a title.

**Live promo cards could not be identified.** One title heuristic said a title element may not have more than 4 descendants, but a live card's title carries the "直播中" tag - `<div class="living">` wrapping a `<picture>` with two `<source>` elements and an `<img>`, plus a `<span>`, so 8 descendants - and the whole title was rejected. The limit is 12 now, based on that measurement.

**Discovering promo cards.** Candidate cards are no longer filtered by whichever category switches happen to be on (with only "live" enabled, a bangumi promo card could never be found), and promo cards inserted by lazy loading trigger a scan immediately instead of waiting for a scroll.

### 1.1.11

Following the hint, I went through the bilibili.com page source and listed everything painted with the grey placeholder colour (`--graph_bg_regular`): `.floor-card` (the one with the border and shadow), `.recommended-swipe-body` (the grey body inside the top-left block), `.layer.tiny`, `.bili-video-card__image--wrap`, `.v-img`, the various `__skeleton--*` parts, and the empty `.extension-tips-v2` slides in the banner.

All of them live inside the card containers, so the fix has to come from hiding the container together with the card. The previous attempt had a hole: **it stopped as soon as a container held more than one card**, which left the container's own grey background exposed. It now keeps walking up as long as every card inside is hidden and there is no other real content in there. The container is also re-evaluated every time, so when the second card in a container gets hidden the container follows.

While checking this I found something more important: the size safety valve was "skip anything over 1100x700 or 15% of the viewport", but the top-left two-column block measures 580x485, about 25% of the viewport - **meaning videos in that spot were never blocked at all**. The limit is now 1200x800 / 35%, which covers it while still catching the real disasters (the 1401x808 full-page container I measured).
### 1.1.10

A faint line in a tester's screenshot led me to it: Bilibili's promo cards sit inside a `.floor-card` that carries a border, a white background and a 40px shadow, while the card itself is inside it. I was only hiding the inner element, so the content disappeared but the outer box stayed — in both hiding modes.

It now walks up from the card to the outermost container that still holds only that one card and handles it too: `visibility:hidden` in keep-slot mode (border, background and shadow all go away, the slot stays), `display:none` in remove-slot mode (the whole grid item goes away, no leftover frame).

### 1.1.9

Fixing the white empty box left by the previous version. Keep-slot mode used to hide the card's **children**, so the card's own background and border stayed and it looked like an empty white box. v1.0.0 looked natural because it hid the inner card and the outer grid item has no background. It now applies `visibility:hidden` to the card itself: the slot stays, background and border vanish with it.

### 1.1.8

Went through the whole remove-slot path and fixed five things: the grid was only found via the immediate parent (missed when a card sits one level deeper), classes were cleared and re-added on every run (jitter while scrolling), placeholder detection required no `<img>` (skeletons with an unloaded image were missed), only direct children were scanned (nested empty cards were missed), and empty elements were hidden indiscriminately (could hide a height-carrying container). Also tightened the periodic re-check from 2.5s to 1.5s.

### 1.1.7

Feedback said only v1.0.0's hide mode was any good, so I ran both versions against the same real DOM and found out why: in v1.1.0 I added `.bili-feed-card` to the card selector, which changed the hiding target from "the card's content" to "the whole grid item". The grid then reflowed and the freed cells got filled with Bilibili's empty skeleton placeholders. Added the "keep the original slot" switch, defaulting to the v1.0.0 behaviour.

### 1.1.6

Fixed a bug I introduced myself: the size safety valve keyed off "is the match reason unchanged", but in hide mode a card is `display:none` (zero size), so as soon as the matching keyword changed the valve refused to process the card and it never came back when switching to Mask. Also found that `hasLayoutEngine()` cached its result permanently — if it was first called before `body` had a layout, the valve was disabled for the whole session.

### 1.1.5

Fixed grey blocks appearing in the middle of the feed in hide mode. Bilibili's grid keeps skeleton-only placeholders at the end; hiding the cards before them makes the grid pull those placeholders forward. In remove-slot mode they're now collapsed too (load sentinels are only made invisible so loading still works).

### 1.1.4

Rewrote category detection after measuring the real site in a headless Edge. Enabling "Events" used to blank the whole page — the walk-up started from a hidden 0×0 promo link, jumped three levels and landed on a 1401×808 side-button container. Promo cover and title were also being masked separately (the real cards use utility classes, not BEM). Removed the "block whole rows" feature and replaced it with a separate home-banner switch.

### 1.1.3

First attempt at filling out the category list (9 → 14, plus the catch-all) and at fixing the blank-page issue — but I fixed the wrong thing; the real cause only turned up in 1.1.4.

### 1.1.0

Category blocking did nothing before this, because it relied on class names alone. This version infers the type from the links inside the card. Also switched the mask to reveal-on-hover and made the floating button draggable.

### 1.0.0

First version: block by title keyword, two blocking styles, nine promo categories, in-page panel, dark mode.

---

## License

There's no license file yet. If you want to use this somewhere else, open an issue first.
